fix: 🐛 windows scrollbar due to 100vw width

--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -3,12 +3,12 @@
   padding: 0;
   position: relative;
   min-height: 100vh;
-  min-width: 100vw;
+  min-width: 100%;
 }
 .header__image {
     object-fit: cover;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
     position: fixed;
     z-index: -1;
   }
